# Comfy-Cozy

./: .dockerignore  .env.example  .gitignore  BUILD_QUEUE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  COUNCIL_DECISIONS.md  DISPATCH_PROFILERX.md  Dockerfile  GRAPH_FORGE_health_mock_leak.md  GRAPH_FORGE_windows_grep_portability.md  LOCAL_TWIN_BLUEPRINT.md  PANEL_DESIGN.md  PHASE_6_PIPELINE_ANALYSIS.md  PHASE_7_CREATIVE_DIRECTION.md  PRODUCT_VISION.md  QUICKSTART.md  README.md  RUN_INSIDE_OUT_PASS.md  SETUP_GUIDE.md  SPONSORS.md  STRATEGY.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  vitest.config.js
.claude/: COZY_CONSTITUTION.md  LATENCY_CONSTITUTION.md  settings.json  settings.local.json  v2-status.json
.claude/agents/: cozy-architect.md  cozy-crucible.md  cozy-forge.md  cozy-profiler.md  cozy-provisioner.md  cozy-scout.md  cozy-scribe.md  cozy-vision.md
.claude/commands/: PRODUCTION_HARDEN.md  QUICKSTART.md  cozy-cycle.md  latency-cycle.md
.claude/workflows/: cozy-improve.workflow.js  cozy-v2-epoch.workflow.js  refinement-pass.js
.github/: FUNDING.yml
.github/workflows/: ci.yml  packaging-gate.yml  release.yml
agent/: __init__.py  _build.py  _conn_ctx.py  _render.py  _session_helpers.py  artifacts.py  circuit_breaker.py  cli.py  config.py  context.py  degradation.py  discovery_cache.py  embedder.py  errors.py  health.py  main.py  mcp_server.py  metrics.py  progress.py  session_context.py  startup.py  streaming.py  system_prompt.py  tool_scope.py  workflow_session.py
agent/agents/: __init__.py  intent_agent.py  router.py  verify_agent.py
agent/brain/: __init__.py  _protocol.py  _sdk.py  demo.py  exr_ingest.py  intent_collector.py  iteration_accumulator.py  iterative_refine.py  memory.py  optimizer.py  orchestrator.py  planner.py  vision.py
agent/diagnosis/: __init__.py  checks.py  cli.py  diagnosis.py
agent/engine/: __init__.py  _base.py  _types.py  comfyui_adapter.py  pool.py
agent/gate/: checks.py  pre_dispatch.py  risk_levels.py
agent/harness/: __init__.py  cozy_loop.py
agent/integrations/: __init__.py  moneta.py
agent/knowledge/: __init__.py  compositing_multipass.md  controlnet_patterns.md  embedder.py  flux_specifics.md  triggers.yaml  video_workflows.md  workflow_optimization.md
agent/llm/: __init__.py  _anthropic.py  _base.py  _custom.py  _gemini.py  _health.py  _nvidia.py  _ollama.py  _openai.py  _selection.py  _types.py  swap.py
agent/memory/: session.py
agent/perf/: __init__.py  baseline.py  benchmark.py  canonical.py  contention.py  profile.py
agent/profiles/: loader.py  ltx2.yaml  wan2.yaml
agent/recipes/: __init__.py  base.py  builtin.py
agent/schemas/: loader.py
agent/stage/: arbiter.py  cognitive_stage.py  compositor_tools.py  constitution.py  cwm.py  foresight_tools.py  hyperagent.py  moe_dispatcher.py  moe_profiles.py  mutation_bridge.py  provision_tools.py  ratchet.py  stage_tools.py
agent/templates/: depth_normals_beauty.json  video_ltx2.json  video_wan2.json
agent/tests/: test_startup.py
agent/tools/: __init__.py  _surfaces.py  _util.py  auto_wire.py  canvas_bridge.py  capability_defaults.py  civitai_api.py  comfy_api.py  comfy_discover.py  comfy_execute.py  comfy_inspect.py  comfy_provision.py  diagnose_tool.py  exec_profile.py  github_releases.py  image_metadata.py  local_assets.py  model_compat.py  model_swap.py  nim_lifecycle.py  node_replacement.py  output_watcher.py  perf_tools.py  pipeline.py  proactive_memory.py  provision_pipeline.py  recipes_tool.py  session_tools.py  ui_api_parser.py  verify_execution.py  vision_cache.py  workflow_lock.py  workflow_parse.py  workflow_patch.py  workflow_templates.py
agent/verbs/: __init__.py  _cli_state.py  find.py  intend.py  open_canvas.py  own.py  pull_canvas.py  see.py
cognitive/core/: delta.py  graph.py  models.py
cognitive/experience/: accumulator.py  chunk.py
cognitive/pipeline/: __init__.py  autonomous.py
demo/: DIAGNOSIS_RUNBOOK.md  seed_diagnosis_demo.py
docs/: AGENT_TOOLING_BEST_PRACTICES.md  ARCHITECTURE.md  AUTHORITY_MAP.md  CLAUDE_CODE_INSTALL_PACK.md  CLAUDE_CODE_SETUP_GUIDE.md  COMFYUI_3D_PACK_REBUILD.md  COMFYUI_AGENT_DESIGN_SYSTEM.md  CTO_REVIEW_JUNE_2026.md  DIRECTION.md  HARNESS_PUBLISHING_BLOCKER.md  IMPROVEMENT_AREAS_JUNE_2026.md  L-PANEL_ADVERSARIAL_PASS_JUNE_2026.md  LATENCY_MAP.md  PHASE_3A_EXECUTE_DESIGN.md  PHASE_6A_WIRE_THE_PIPE_DESIGN.md  PRD-PHASE8-9x9.md  SESSION_CONTRACT.md  VFX_PRODUCTION_HARDENING_JUNE_2026.md  gate-reversibility-failopen.md  rfc-action-2-bge-monetastore-wiring.md  rfc-stage-provisioner-ssrf.md  rfc-stage-write-injection.md
harness/: CAPSULE.md  PLAN.md  SCOUT_canvas_state_sync.md  SCOUT_rewiring_scope.md  SHIP_REPORT.md  SPEC.md  TRACE-provision-hardening.md  TRACE.md  benchmark_log.jsonl  scout_stream.py
panel/: __init__.py
schema/: diagnosis.schema.json
scripts/: validate_project.py  verify_cozy_links.py
tests/: conftest.py  test_adapters.py  test_agent_tooling_bridge.py  test_arbiter.py  test_audit_lowsev_fixes.py  test_auto_wire.py  test_brain_demo.py  test_brain_integration.py  test_brain_intent_collector.py  test_brain_iteration_accumulator.py  test_brain_memory.py  test_brain_optimizer.py  test_brain_orchestrator.py  test_brain_planner.py  test_brain_protocol.py  test_brain_sdk.py  test_brain_vision.py  test_bridge_auth.py  test_bridge_capabilities_route.py  test_build_state.py  test_capabilities_manifest.py  test_civitai_api.py  test_cli_pull.py  test_cli_state.py  test_cli_verbs.py  test_cli_verbs2.py  test_cognitive_core.py  test_cognitive_experience.py  test_cognitive_pipeline.py  test_cognitive_prediction.py  test_cognitive_stage.py  test_cognitive_tools.py  test_comfy_api.py  test_comfy_discover.py  test_comfy_execute.py  test_comfy_inspect.py  test_comfy_provision.py  test_compositor.py  test_config.py  test_conn_ctx.py  (+116 more)
tooling/: DISPATCH_comfyui_agent_bridge.md  DISPATCH_comfyui_agent_tooling.md  FLUX_Dev_NIM_Workflow.api.json  HARNESS_comfyui_agent_tooling.md  SCAFFOLD_comfyui_agent_tooling.md  queue_nim.py
ui/: __init__.py
(+182 files in other folders)
