[project]
name = "comfyui-agent"
version = "5.2.0"
description = "AI co-pilot for ComfyUI — 129 MCP tools, sub-second re-validate, durable cross-session learning, minimal typography-forward UI"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Joseph Ibrahim"}]
requires-python = ">=3.10"
keywords = ["comfyui", "ai-agent", "stable-diffusion", "workflow", "anthropic", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.52.0",
    "jsonpatch>=1.33",
    "jsonschema>=4.20.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "mcp>=1.20.0,<2.0",
    "pyyaml>=6.0",
    "aiohttp>=3.9.0",
    "networkx>=3.0",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.3.0",
]
stage = [
    "usd-core>=24.0",
]
embed = [
    # Semantic embedding encoder for cognitive memory retrieval (agent/embedder.py).
    # BGE-small-en-v1.5 (384-dim); sentence-transformers pulls torch (CPU is fine).
    "sentence-transformers>=2.2.0",
]
exr = [
    # Linear EXR ingestion for the vision tools (agent/brain/exr_ingest.py); numpy is transitive.
    "openexr>=3.3",
]

[project.urls]
Homepage = "https://github.com/JosephOIbrahim/comfyui-agent"
Repository = "https://github.com/JosephOIbrahim/comfyui-agent"
Issues = "https://github.com/JosephOIbrahim/comfyui-agent/issues"

[project.scripts]
agent = "agent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "cognitive"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests requiring a real ComfyUI server, real API keys, or real filesystem (not mocked). Exclude in CI with -m 'not integration'.",
]

[tool.coverage.run]
source = ["agent"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.ruff]
line-length = 99

[tool.ruff.lint]
ignore = ["E402"]  # Module-level imports after logging setup (intentional pattern)

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F841"]  # Unused variables in tests (side-effect assertions)
