[project]
name = "comfy-cozy"
dynamic = ["version"]
description = "AI co-pilot for VFX artists using ComfyUI: 133 MCP tools across 6 swappable LLM providers (incl. any OpenAI-compatible endpoint), zero-LLM artist recipes, a default-deny safety gate, reversible LIVRPS edits, EXR-aware vision, workflow.lock provenance, and durable cross-session learning."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Joseph Ibrahim"}]
requires-python = ">=3.10"
keywords = [
  "comfyui", "vfx", "mcp", "model-context-protocol", "ai-agent", "copilot",
  "llm", "anthropic-claude", "stable-diffusion", "flux", "sdxl",
  "image-generation", "generative-ai", "workflow-automation", "usd",
  "livrps", "provenance", "exr", "computer-vision", "nvidia-nemotron",
  "model-switching", "openai-compatible", "self-hosted-llm", "vllm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.52.0,<1",
    "jsonpatch>=1.33,<2",
    "jsonschema>=4.20.0,<5",
    "httpx>=0.27.0,<1",
    "websockets>=12.0,<17",
    "python-dotenv>=1.0.0,<2",
    "typer>=0.12.0,<1",
    "rich>=13.0.0,<15",
    "mcp>=1.20.0,<2.0",
    "pyyaml>=6.0,<7",
    "aiohttp>=3.9.0,<4",
    "networkx>=3.0,<4",
    "Pillow>=10.0,<13",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.3.0",
]
stage = [
    "usd-core>=24.0",
]
embed = [
    # Semantic embedding encoder for cognitive memory retrieval (agent/embedder.py).
    # BGE-small-en-v1.5 (384-dim); sentence-transformers pulls torch (CPU is fine).
    "sentence-transformers>=2.2.0",
]
exr = [
    # Linear EXR ingestion for the vision tools (agent/brain/exr_ingest.py); numpy is transitive.
    "openexr>=3.3",
]

[project.urls]
Homepage = "https://github.com/JosephOIbrahim/Comfy-Cozy"
Repository = "https://github.com/JosephOIbrahim/Comfy-Cozy"
Issues = "https://github.com/JosephOIbrahim/Comfy-Cozy/issues"

[project.scripts]
comfy-cozy = "agent.cli:app"
cozy = "agent.cli:app"
agent = "agent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "agent/__init__.py"

# The four data families (knowledge/, profiles/, schemas/, templates/) ride hatchling's
# whole-dir inclusion of the packages below; the packaging gate asserts they are present.
[tool.hatch.build.targets.wheel]
packages = ["agent", "cognitive"]

[tool.hatch.build.targets.sdist]
only-include = ["agent", "cognitive", "tests"]
exclude = ["**/__pycache__"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests requiring a real ComfyUI server, real API keys, or real filesystem (not mocked). Exclude in CI with -m 'not integration'.",
]

[tool.coverage.run]
source = ["agent"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 70

[tool.ruff]
line-length = 99

[tool.ruff.lint]
ignore = ["E402"]  # Module-level imports after logging setup (intentional pattern)

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F841"]  # Unused variables in tests (side-effect assertions)
